[gd_scene load_steps=69 format=3 uid="uid://x2gm3mi7q80i"]

[ext_resource type="Script" path="res://Actors/boss_slime/boss_slime.gd" id="1_6ef3h"]
[ext_resource type="Script" path="res://Utility/Health System/health_system.gd" id="1_wd0eo"]
[ext_resource type="Texture2D" uid="uid://mfco3tw3nv0d" path="res://assets/Actor/Boss/GiantSlime/Hit.png" id="2_rsswo"]
[ext_resource type="Texture2D" uid="uid://cg0tndh2o1t7p" path="res://assets/Actor/Boss/GiantSlime/Idle.png" id="2_rxk2e"]
[ext_resource type="Texture2D" uid="uid://cyvr7rxtiwbll" path="res://assets/FX/Elemental/Flam/SpriteSheet.png" id="2_xojf0"]
[ext_resource type="Texture2D" uid="uid://s3n4cgmb5c3u" path="res://assets/Actor/Boss/GiantSlime/Jump.png" id="3_6ahdu"]
[ext_resource type="Texture2D" uid="uid://c6q0xkhijlqgh" path="res://assets/FX/Smoke/Smoke/SpriteSheet.png" id="3_uimx0"]
[ext_resource type="Texture2D" uid="uid://kr1gpjcu7ofy" path="res://assets/Actor/Characters/Shadow.png" id="6_ja8ey"]
[ext_resource type="Shape2D" uid="uid://cw2efosobc8qr" path="res://Actors/boss_slime/slime_boss_collision_shape.tres" id="7_hdl1p"]
[ext_resource type="StyleBox" uid="uid://da27g4e1qgsos" path="res://UI/OnScreen UI/health_bar_background.tres" id="9_r47to"]
[ext_resource type="Script" path="res://scripts/states/ai_state_machine.gd" id="10_4qo4a"]
[ext_resource type="StyleBox" uid="uid://23ibews3ucw1" path="res://UI/OnScreen UI/health_bar_fill.tres" id="10_v0uqg"]
[ext_resource type="Script" path="res://Utility/NPC Healthbar/npc_healthbar.gd" id="11_h4xrm"]
[ext_resource type="Shape2D" uid="uid://bg4p4hkn8qyhu" path="res://Actors/boss_slime/slime_boss_idle_hurt_box.tres" id="12_vpg88"]
[ext_resource type="Script" path="res://Actors/boss_slime/slime_boss_idle_state.gd" id="14_184pv"]
[ext_resource type="Script" path="res://Actors/boss_slime/slime_boss_wander_state.gd" id="15_c7nam"]
[ext_resource type="Script" path="res://Actors/boss_slime/slime_boss_hit_state.gd" id="16_ufvxn"]
[ext_resource type="Script" path="res://Actors/boss_slime/slime_boss_chase_state.gd" id="17_mcsta"]
[ext_resource type="Shape2D" uid="uid://crwgmvonotm6o" path="res://Actors/boss_slime/slime_boss_detection_shape.tres" id="19_fmvif"]
[ext_resource type="Script" path="res://Actors/boss_slime/slime_boss_slam_state.gd" id="19_xxamj"]
[ext_resource type="Script" path="res://Actors/boss_slime/slime_boss_dead_state.gd" id="20_tfte3"]
[ext_resource type="Shape2D" uid="uid://q3q1nb4rytvw" path="res://Actors/boss_slime/slime_boss_slam_collision.tres" id="22_6n0yy"]
[ext_resource type="Material" uid="uid://cogs06c1kkje0" path="res://Actors/boss_slime/boss_slam_particles.tres" id="23_lkosr"]
[ext_resource type="Texture2D" uid="uid://t83tnad11kw2" path="res://assets/FX/Particle/Clouds.png" id="24_vkbys"]
[ext_resource type="PackedScene" uid="uid://csitq07x285ie" path="res://Utility/Context Map/context_map.tscn" id="25_jtgqv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_abt7f"]
atlas = ExtResource("2_rsswo")
region = Rect2(0, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxpge"]
atlas = ExtResource("2_rsswo")
region = Rect2(62, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhjtu"]
atlas = ExtResource("2_rsswo")
region = Rect2(124, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l7id"]
atlas = ExtResource("2_rsswo")
region = Rect2(62, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_c82dd"]
atlas = ExtResource("2_xojf0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4x2u"]
atlas = ExtResource("2_xojf0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i0ks"]
atlas = ExtResource("2_xojf0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_44kx5"]
atlas = ExtResource("2_xojf0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63mee"]
atlas = ExtResource("2_xojf0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c1ui"]
atlas = ExtResource("3_uimx0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wptyk"]
atlas = ExtResource("3_uimx0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1io0e"]
atlas = ExtResource("3_uimx0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjcuo"]
atlas = ExtResource("3_uimx0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_apvdg"]
atlas = ExtResource("3_uimx0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_df12b"]
atlas = ExtResource("3_uimx0")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v387w"]
atlas = ExtResource("2_rxk2e")
region = Rect2(0, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_k10j1"]
atlas = ExtResource("2_rsswo")
region = Rect2(0, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mja1"]
atlas = ExtResource("2_rsswo")
region = Rect2(62, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_rargh"]
atlas = ExtResource("2_rsswo")
region = Rect2(124, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_tstb3"]
atlas = ExtResource("2_rsswo")
region = Rect2(186, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmtfs"]
atlas = ExtResource("2_rsswo")
region = Rect2(248, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2kpa"]
atlas = ExtResource("2_rxk2e")
region = Rect2(0, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_te18e"]
atlas = ExtResource("2_rxk2e")
region = Rect2(62, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_vijgs"]
atlas = ExtResource("2_rxk2e")
region = Rect2(124, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7ffg"]
atlas = ExtResource("2_rxk2e")
region = Rect2(186, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_6na0m"]
atlas = ExtResource("2_rxk2e")
region = Rect2(248, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_no0kt"]
atlas = ExtResource("3_6ahdu")
region = Rect2(0, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7udx"]
atlas = ExtResource("3_6ahdu")
region = Rect2(62, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6uia"]
atlas = ExtResource("3_6ahdu")
region = Rect2(124, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmq6x"]
atlas = ExtResource("3_6ahdu")
region = Rect2(186, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_emeia"]
atlas = ExtResource("3_6ahdu")
region = Rect2(248, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmfge"]
atlas = ExtResource("3_6ahdu")
region = Rect2(310, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_acead"]
atlas = ExtResource("3_6ahdu")
region = Rect2(372, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_02n48"]
atlas = ExtResource("3_6ahdu")
region = Rect2(434, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hmka"]
atlas = ExtResource("3_6ahdu")
region = Rect2(496, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6xsp"]
atlas = ExtResource("3_6ahdu")
region = Rect2(558, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnepm"]
atlas = ExtResource("3_6ahdu")
region = Rect2(620, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_urs0u"]
atlas = ExtResource("3_6ahdu")
region = Rect2(682, 0, 62, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ch1t"]
atlas = ExtResource("3_6ahdu")
region = Rect2(744, 0, 62, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_2tu06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abt7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxpge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhjtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l7id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c82dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4x2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i0ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44kx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63mee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c1ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wptyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1io0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjcuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apvdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df12b")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v387w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k10j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mja1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rargh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tstb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmtfs")
}],
"loop": false,
"name": &"hit",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2kpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te18e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vijgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7ffg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6na0m")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_no0kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7udx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6uia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmq6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emeia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmfge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acead")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02n48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hmka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6xsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnepm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urs0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ch1t")
}],
"loop": false,
"name": &"slam",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_kgnbt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -17)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtBox/IdleCollisionBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DetectionArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ShadowSprite:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AnimatedSprite2D:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BossParticles:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ibhf8"]
resource_name = "new_animation"
length = 2.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 6, 7, 8, 9, 10, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.6, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -17), Vector2(0, -50), Vector2(0, -17), Vector2(0, -17)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackArea2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtBox/IdleCollisionBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DetectionArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ShadowSprite:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.2, 0.6, 0.8, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1), Vector2(8, 8), Vector2(2, 2), Vector2(2, 2)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AnimatedSprite2D:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.2, 1, 1.2, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1), Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BossParticles:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vrmks"]
_data = {
"RESET": SubResource("Animation_kgnbt"),
"new_animation": SubResource("Animation_ibhf8")
}

[node name="BossSlime" type="CharacterBody2D" groups=["Enemy"]]
modulate = Color(1, 1, 1, 0.945098)
y_sort_enabled = true
collision_layer = 32
collision_mask = 7
script = ExtResource("1_6ef3h")
health = 150
physical_attack = 15
physical_defense = 5
magical_attack = 5
magical_defense = 10
poise = 10
damage_to_player = 20

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_2tu06")
animation = &"slam"

[node name="ShadowSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.239216)
scale = Vector2(2, 2)
texture = ExtResource("6_ja8ey")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
unique_name_in_owner = true
position = Vector2(0, -6)
rotation = -1.5708
shape = ExtResource("7_hdl1p")

[node name="ContextMap" parent="." instance=ExtResource("25_jtgqv")]

[node name="NavAgent" type="NavigationAgent2D" parent="."]
navigation_layers = 6
avoidance_enabled = true

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("10_4qo4a")
state = NodePath("idle")

[node name="idle" type="Node" parent="FSM" node_paths=PackedStringArray("animator", "actor")]
script = ExtResource("14_184pv")
animator = NodePath("../../AnimatedSprite2D")
actor = NodePath("../..")

[node name="hit" type="Node" parent="FSM" node_paths=PackedStringArray("animator", "actor", "hurt_box")]
script = ExtResource("16_ufvxn")
animator = NodePath("../../AnimatedSprite2D")
actor = NodePath("../..")
hurt_box = NodePath("../../HurtBox")

[node name="wander" type="Node" parent="FSM" node_paths=PackedStringArray("animator", "actor")]
script = ExtResource("15_c7nam")
animator = NodePath("../../AnimatedSprite2D")
actor = NodePath("../..")

[node name="chase" type="Node" parent="FSM" node_paths=PackedStringArray("actor", "animator", "audio")]
script = ExtResource("17_mcsta")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
audio = NodePath("../../NPCAudioStream")

[node name="slam" type="Node" parent="FSM" node_paths=PackedStringArray("animator", "actor", "audio")]
script = ExtResource("19_xxamj")
animator = NodePath("../../AnimatedSprite2D")
actor = NodePath("../..")
audio = NodePath("../../NPCAudioStream")

[node name="dead" type="Node" parent="FSM" node_paths=PackedStringArray("animator", "actor")]
script = ExtResource("20_tfte3")
animator = NodePath("../../AnimatedSprite2D")
actor = NodePath("../..")

[node name="HealthSystem" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("1_wd0eo")
actor = NodePath("..")

[node name="HealthBar" type="ProgressBar" parent="." node_paths=PackedStringArray("health_system", "enemy_audio")]
visible = false
z_index = 1
custom_minimum_size = Vector2(40, 5)
offset_left = -14.0
offset_top = -17.0
offset_right = 26.0
offset_bottom = 5.0
scale = Vector2(0.720002, 0.24)
theme_override_styles/background = ExtResource("9_r47to")
theme_override_styles/fill = ExtResource("10_v0uqg")
step = 1.0
show_percentage = false
script = ExtResource("11_h4xrm")
health_system = NodePath("../HealthSystem")
enemy_audio = NodePath("../NPCAudioStream")

[node name="HurtBox" type="Area2D" parent="." groups=["Enemy"]]
unique_name_in_owner = true
collision_layer = 32

[node name="IdleCollisionBox" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -8)
rotation = -1.5708
shape = ExtResource("12_vpg88")

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -6)
rotation = -1.5708
shape = ExtResource("19_fmvif")

[node name="AttackArea2D" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(0, -5)
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
position = Vector2(0, 2)
rotation = -1.5708
scale = Vector2(2, 2)
shape = ExtResource("22_6n0yy")
disabled = true

[node name="NPCAudioStream" type="AudioStreamPlayer2D" parent="."]

[node name="TestLabel" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -39.0
offset_right = 20.0
offset_bottom = -21.0
text = "Test"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vrmks")
}

[node name="BossParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 4
sub_emitter = NodePath(".")
process_material = ExtResource("23_lkosr")
texture = ExtResource("24_vkbys")
one_shot = true
explosiveness = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
